hphp/hack/test/typecheck/primitive_casing.php
<?hh

function f(Array $arr): String {
  return 's';
}
